data/derived/sp14/progs/unify/prog0478.ml.out
Characters 154-172:
  if length1 < length2 then padZero(0::l1, l2)
                            ^^^^^^^^^^^^^^^^^^
Error: This expression has type 'a -> 'b
       but an expression was expected of type int list * 'c list
